# satdownloader

./: .gitignore  README.md  pyproject.toml
satdownloader/: __init__.py  main.py
satility/: __init__.py  downloader.py  ensemble.py  meta.py  model.py
